--- a/locales/en.json
+++ b/locales/en.json
@@ -149,6 +149,7 @@
     "notFound": "Book not found",
     "by": "by",
     "unknownAuthor": "an unknown author",
+    "unknownDescription": "We don't know anything about this book...",
     "sections": {
       "aboutBook": "About this book",
       "details": "Details"
