feat: Add global API unavailability handling and error UI
Introduces ApiStatusContext for tracking API availability, enhances error handling in API client, and integrates a new ApiErrorBoundary component for user-friendly offline/error states. Updates all major screens to display appropriate UI when the API is unavailable, and adds localized error messages. Removes button press scaling from BookCard for consistency.

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -191,6 +191,15 @@
     "yes": "Ano",
     "no": "Ne"
   },
+  "api": {
+    "error": {
+      "title": "Problém s Připojením",
+      "defaultMessage": "Zdá se, že server nyní nelze kontaktovat. Zkuste to prosím znovu později.",
+      "explanation": "Naše servery mohou být dočasně nedostupné kvůli údržbě nebo vysoké návštěvnosti. Děkujeme za vaši trpělivost.",
+      "offline": "Offline",
+      "retryButton": "Zkusit Znovu"
+    }
+  },
   "languages": {
     "en": "English",
     "es": "Español",
